# DynamicBoltzmann

./: CMakeLists.txt  Makefile  Makefile_doxygen  README.md  analyze.nb  analyze_bimol_annihilation.nb  analyze_rossler.nb  analyze_rossler_long.nb  basis_func.cpp  basis_func.hpp  basis_func_nd.cpp  basis_func_nd.hpp  create_data_dirs.py  dynamic_boltzmann.cpp  dynamic_boltzmann.hpp  general.hpp  grid.cpp  hidden_unit.cpp  hidden_unit.hpp  interp.cpp  interp.out  ixn_param.cpp  ixn_param.hpp  ixn_param_traj.cpp  ixn_param_traj.hpp  l1.txt  l3.txt  l4.txt  lattice.cpp  lattice.hpp  main.cpp  main.out  main_annihilation.cpp  main_bimol_annihilation.cpp  main_rossler.cpp  main_rossler_long.cpp  main_rossler_short.cpp  main_rossler_short_multiple_samples.cpp  main_rossler_varying_ic.cpp  species.cpp  (+7 more)
1_basis_func/: README.md  dynamic_boltzmann.cpp  gw_1d.nb  (+7 more)
bmla/: CMakeLists.txt  Makefile  README.md  bmla.cpp  bmla.hpp  ixn_param.cpp  ixn_param.hpp  species.cpp  species.hpp
bmla/examples/bimol_annihilation_aa_to_0/: README.md  main.cpp  main_no_hidden.cpp
bmla/examples/bimol_annihilation_aa_to_0/data_learned/ixn_params/: bX_002.txt  bX_003.txt  bX_004.txt  bX_005.txt  bX_006.txt  bX_007.txt  bX_008.txt  bX_009.txt  bX_010.txt  bX_011.txt  bX_012.txt  bX_013.txt  bX_014.txt  bX_015.txt  bX_016.txt  bX_017.txt  bX_018.txt  bX_019.txt  bX_020.txt  bX_021.txt  bX_022.txt  bX_023.txt  bX_024.txt  bX_025.txt  bX_026.txt  bX_027.txt  bX_028.txt  bX_029.txt  bX_030.txt  bX_031.txt  bX_033.txt  bX_034.txt  bX_035.txt  bX_036.txt  bX_037.txt  bX_038.txt  bX_039.txt  bX_040.txt  bX_041.txt  bX_042.txt  (+2869 more)
bmla/examples/bimol_annihilation_aa_to_0/data_learned/moments/: bX_001.txt  bX_002.txt  bX_003.txt  bX_004.txt  bX_005.txt  bX_006.txt  bX_007.txt  bX_008.txt  bX_009.txt  bX_010.txt  bX_011.txt  bX_012.txt  bX_013.txt  bX_014.txt  bX_015.txt  bX_016.txt  bX_017.txt  bX_018.txt  bX_019.txt  bX_020.txt  bX_021.txt  bX_022.txt  bX_023.txt  bX_024.txt  bX_025.txt  bX_026.txt  bX_027.txt  bX_028.txt  bX_029.txt  bX_030.txt  bX_031.txt  bX_032.txt  bX_033.txt  bX_034.txt  bX_035.txt  bX_036.txt  bX_037.txt  bX_038.txt  bX_039.txt  bX_040.txt  (+2960 more)
bmla/examples/bimol_annihilation_aa_to_0/data_learned_no_hidden/ixn_params/: hA_001.txt  hA_003.txt  hA_004.txt  hA_005.txt  hA_006.txt  hA_007.txt  hA_008.txt  hA_009.txt  hA_010.txt  hA_011.txt  hA_012.txt  hA_013.txt  hA_014.txt  hA_015.txt  hA_016.txt  hA_017.txt  hA_018.txt  hA_019.txt  hA_020.txt  hA_021.txt  hA_022.txt  hA_023.txt  hA_024.txt  hA_025.txt  hA_026.txt  hA_027.txt  hA_028.txt  hA_029.txt  hA_030.txt  hA_031.txt  hA_032.txt  hA_033.txt  hA_034.txt  hA_035.txt  hA_036.txt  hA_037.txt  hA_038.txt  hA_039.txt  hA_040.txt  hA_041.txt  (+537 more)
bmla/examples/bimol_annihilation_aa_to_0/data_learned_no_hidden/moments/: hA_001.txt  hA_002.txt  hA_003.txt  hA_004.txt  hA_005.txt  hA_006.txt  hA_007.txt  hA_008.txt  hA_009.txt  hA_010.txt  hA_011.txt  hA_012.txt  hA_013.txt  hA_014.txt  hA_015.txt  hA_016.txt  hA_017.txt  hA_018.txt  hA_019.txt  hA_020.txt  hA_021.txt  hA_022.txt  hA_023.txt  hA_024.txt  hA_025.txt  hA_026.txt  hA_027.txt  hA_028.txt  hA_029.txt  hA_030.txt  hA_031.txt  hA_032.txt  hA_033.txt  hA_034.txt  hA_035.txt  hA_036.txt  hA_037.txt  hA_038.txt  hA_039.txt  hA_040.txt  (+857 more)
bmla/examples/bimol_annihilation_aa_to_0/mathematica/: ixn_params.nb  moments.nb
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/: main.cpp
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v000/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v001/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v002/counts/: A.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v002/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v003/counts/: A.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v003/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v004/counts/: A.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v004/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v005/counts/: A.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v005/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v006/counts/: A.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v006/lattice/: 0000.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v007/counts/: A.txt
bmla/examples/bimol_annihilation_aa_to_0/stoch_sim/lattice_v007/lattice/: 0000.txt
bmla/include/: bmla  bmla.hpp  dblz  general.hpp
bmla/include/bmla_bits/: bmla.hpp  connections.hpp  dim.hpp  fname.hpp  general.hpp  ixn_dicts.hpp  ixn_param.hpp  lattice.hpp  moment.hpp  opt_problem.hpp  opt_problem_bm.hpp  opt_problem_rbm.hpp  solver.hpp  species.hpp  unit.hpp
bmla/include/bmla_bits/fwds/: fwds_ixn_param.hpp  fwds_species.hpp
bmla/include/dblz_bits/: adjoint.hpp  diff_eq_rhs.hpp  fname_traj.hpp  ixn_param.hpp  ixn_param_traj.hpp  lattice.hpp  lattice_traj.hpp  moment.hpp  opt_problem.hpp  opt_problem_dynamic.hpp  species.hpp
bmla/include/dblz_bits/fwds/: fwds_ixn_param.hpp  fwds_ixn_param_traj.hpp
bmla/legacy/: bmla.cpp  bmla.hpp  lattice.cpp  main_bmla.cpp  main_bmla.out
bmla/legacy/2019_01_03/: unit.cpp  unit.hpp
bmla/legacy/src/: connection.cpp  connection.hpp  hidden_layer.cpp  hidden_layer.hpp  hidden_species.cpp  hidden_species.hpp  site.cpp  site.hpp
bmla/legacy/src_bkup/: counter copy.cpp  counter copy.hpp  species copy.cpp  species copy.hpp
bmla/src/: adjoint.cpp  bmla.cpp  connections.cpp  counter.cpp  counter.hpp  diff_eq_rhs.cpp  fname.cpp  fname_traj.cpp  general.cpp  hidden_unit.cpp  hidden_unit.hpp  ixn_dicts.cpp  ixn_param.cpp  ixn_param.hpp  ixn_param_traj.cpp  lattice.cpp  lattice.hpp  lattice_traj.cpp  moment.cpp  opt_problem.cpp  opt_problem_bm.cpp  opt_problem_dynamic.cpp  opt_problem_rbm.cpp  opt_problem_static.cpp  solver.cpp  species.cpp  species.hpp  unit.cpp
bmla/src/include_impl/: bmla.cpp  dim.cpp  general.cpp
(+74284 files in other folders)
